--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,6 @@
 @import "./reboot";
 @import "./global";
+@import "./fonts.scss";
+@import "./colors.scss";
+@import "./sizes.scss";
+@import "./mixins.scss";
