--- a/src/pages/Main/styles.module.scss
+++ b/src/pages/Main/styles.module.scss
@@ -1,3 +1,8 @@
-.container {
-  background-color: red;
+@import "../../styles/index.scss";
+
+.page {
+  height: 100vh;
+  height: 100svh;
+  position: relative;
+  padding: $page-header-height $page-layout-side-padding 0px;
 }
