--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,10 +10,13 @@ $text_error_color: #ff6769;
 $text_positive_color: #bdec00;
 $text_negative_color: #ec4700;
 $text_navigation_color: #329cff;
+$text_muted_color: #646464;
+$text_dark_color: #5b5b5b;
+$text_light_color: #d7d7d7;
 $text_highlighted_color: #f87d37;
 
 // Background Colors
-$bg_main_color: #0d0d0d;
+$bg_main_color: #171922;
 $bg_primary_color: #7685f7;
 $bg_secondary_color: #161616;
 $bg_third_color: #262626;
@@ -24,6 +27,10 @@ $bg_selected_color: #329cff;
 $bg_negative_color: #d63030;
 $bg_positive_color: #87df00;
 $bg_notification_color: #d63030;
+$bg_color_1: #151515; // dark
+$bg_color_2: #141414; // muted
+$bg_color_3: #ffffff; // light
+$bg_color_4: #f4f4f4; // silver
 
 // Border Colors
 $border_main_color: #1b1b1b;
@@ -33,6 +40,14 @@ $border_third_color: #313341;
 $border_info_color: #329cff;
 $border_success_color: #6cb200;
 $border_error_color: #f7706d;
+$border_separate_line_color: #333;
+$border_color_1: #4a5568; // Muted
+$border_color_2: #161616; // Dark
+$border_highlighted_color: #f87d37;
+
+// MODAL
+$bg_modal_container_color: #0d0d0d;
+$bg_backdrop_color: rgba(0, 0, 0, 0.4);
 
 // ALERT
 $alert_success_bg_color: #0d0d0d;
