--- a/src/pages/Main/styles.module.scss
+++ b/src/pages/Main/styles.module.scss
@@ -8,5 +8,14 @@
 }
 
 .page_content {
-  padding: 20px $page-layout-side-padding;
+  padding: 24px $page-layout-side-padding;
+}
+
+.categories_wrapper {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  width: 100%;
+  // background-color: red;
 }
