added topic button

--- a/src/pages/Category/styles.module.scss
+++ b/src/pages/Category/styles.module.scss
@@ -10,3 +10,11 @@
 .page_content {
   padding: 24px $page-layout-side-padding;
 }
+
+.topics_wrapper {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  width: 100%;
+}
