--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -62,3 +62,8 @@ $alert_info_border_color: #7685f7;
 $category_button_gradient_1: #0e1fd4;
 $category_button_gradient_2: #2575fc;
 $category_button_shadow: #3c4fe0;
+$category_button_text_color: #f4f4f4;
+
+$topic_button_bg_color: #071734;
+$topic_button_text_color: #f4f4f4;
+$topic_button_icon_wrapper_color: #041028;
