--- a/src/components/CategoryButton/styles.module.scss
+++ b/src/components/CategoryButton/styles.module.scss
@@ -1,18 +1,9 @@
 @import "../../styles/index.scss";
 
-.button {
-  @include center;
-  width: 100%;
-  height: 120px;
-  background-color: #071734;
-  border-radius: 8px;
-  padding: 12px;
-}
-
 .button_text {
   font-size: 16px;
   font-weight: 700;
-  color: $text_primary_color;
+  color: $category_button_text_color;
   line-height: 1;
   list-style: none;
   white-space: nowrap;
@@ -21,6 +12,11 @@
 }
 
 .button {
+  @include center;
+  width: 100%;
+  height: 120px;
+  border-radius: 8px;
+  padding: 12px;
   appearance: none;
   background: radial-gradient(
     100% 100% at 100% 0,
