--- a/src/components/base-components/Header/styles.module.scss
+++ b/src/components/base-components/Header/styles.module.scss
@@ -5,10 +5,8 @@
   height: $page-header-height;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  gap: 8px;
-  padding: 0px $page-layout-side-padding;
   background-color: $bg_primary_color;
   position: fixed;
   left: 0px;
@@ -17,14 +15,54 @@
   z-index: $header_z_index;
 }
 
+.header_content {
+  width: 100%;
+  height: $page-header-height;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  padding: 0px $page-layout-side-padding;
+  position: relative;
+}
+
 .left_row {
   @include center;
 }
 
 .middle_row {
   @include center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .right_row {
   @include center;
+}
+
+.back_button {
+  width: auto;
+  height: 33px;
+  @include center;
+  gap: 0px;
+  border-radius: 4px;
+  background: $bg-brand-color;
+
+  .back_text {
+    font-size: 12px;
+    margin-right: 8px;
+    color: $text_primary_color;
+    font-weight: 500;
+  }
+}
+
+.settings_button {
+  width: 33px;
+  height: 33px;
+  @include center;
+  border-radius: 4px;
+  background: $bg-brand-color;
 }
