--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -67,3 +67,10 @@ $category_button_text_color: #f4f4f4;
 $topic_button_bg_color: #071734;
 $topic_button_text_color: #f4f4f4;
 $topic_button_icon_wrapper_color: #041028;
+
+$question_button_bg_color: transparent;
+$question_button_border_color: #f4f4f4;
+$question_button_text_color: #f4f4f4;
+$question_button_viewed_bg_color: #329622;
+$question_button_viewed_text_color: #f4f4f4;
+$question_button_viewed_border_color: #329622;
